<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Place">

    <EditText
        android:id="@+id/orderid"
        android:layout_width="300dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toTopOf="@id/txtread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/enter_order_id_to_view_status"/>

    <TextView
        android:id="@+id/txtread"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/getbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">

    </TextView>

    <Button
        android:id="@+id/getbutton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:backgroundTint="@color/black"
        android:text="@string/view_current_order"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836">

    </Button>
    <Button
        android:id="@+id/btnView"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:backgroundTint="#010727"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="651dp" />
</androidx.constraintlayout.widget.ConstraintLayout>