<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Issue">

    <TextView
        android:id="@+id/textReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/fill_the_form_below_to_report_issue"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/firebaseImage"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:src="@drawable/bike"
        app:layout_constraintBottom_toTopOf="@+id/issue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReport"
        app:layout_constraintVertical_bias="0.457" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="150dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/please_input_issue_here" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#010727"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/select_photo"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issue" />

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#010727"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/upload_photo"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select" />

</androidx.constraintlayout.widget.ConstraintLayout>