<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txtSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="8dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txtReceiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="8dp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="8dp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txtDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="8dp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_point"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txtPickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="8dp">
            </TextView>

        </LinearLayout>
        </LinearLayout>

</androidx.cardview.widget.CardView>